fix: incorrect overflow

--- a/src/components/DocLayout/DocLayout.scss
+++ b/src/components/DocLayout/DocLayout.scss
@@ -81,7 +81,7 @@
     @media (max-width: map-get($screenBreakpoints, 'md') - 1) {
         flex-direction: column-reverse;
 
-        &__center + &__right:has(> .dc-subnavigation_invisible) {
+        &__center + &__right:has(> .dc-subnavigation_hidden) {
             margin-top: calc(0px - var(--dc-subnavigation-height, #{$subNavigationHeight}));
         }
 
@@ -123,6 +123,10 @@
 
             &_visible {
                 left: 0;
+
+                body:has(&) {
+                    overflow-y: hidden;
+                }
             }
         }
 
